--- a/.travis.yml
+++ b/.travis.yml
@@ -57,8 +57,8 @@ before_script:
 
 script:
 
-  - ./gradlew clean build connectedCheck -PdisablePreDex --stacktrace #--scan
+ # - ./gradlew clean build connectedCheck -PdisablePreDex --stacktrace #--scan
   - ./gradlew build --scan
 
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+#after_success:
+#  - bash <(curl -s https://codecov.io/bash)
