--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.codefusiongroup.gradshub"
-        minSdkVersion 16
+        minSdkVersion 18
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -48,14 +48,23 @@ task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'crea
         xml.enabled = true
         html.enabled = true
     }
+   // def fileFilter = ['**/R.class', '**/R$*.class','**/BuildConfig.*', '**/Manifest*.*','**/Test*.*', 'android/**/*.*']
+   // def debugTree = fileTree(dir: "${buildDir}/intermediates/classes/debug", excludes: fileFilter)
+   // def mainSrc = "${project.projectDir}/src/main/java"
+   // sourceDirectories = files([mainSrc])
+   // classDirectories.setFrom(classDirectories.files.collect {fileTree([debugTree])
+   // executionData = fileTree(dir:"$buildDir", includes:[
+  //          "jacoco/testDebugUnitTest.exec",
+  //          "outputs/code-coverage/connected/*coverage.ec"
+   // ])
 }
 
 dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
@@ -64,6 +73,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
     testImplementation 'org.mockito:mockito-core:2.8.47'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
     androidTestImplementation 'androidx.navigation:navigation-testing:2.3.0'
     debugImplementation ('androidx.fragment:fragment-testing:1.2.5') {exclude group:'org.jetbrains.kotlin'}
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
@@ -75,6 +85,7 @@ dependencies {
 
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 
     androidTestImplementation 'com.21buttons:fragment-test-rule:2.0.1'
     debugImplementation 'com.21buttons:fragment-test-rule-extras:2.0.1'
