--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,8 @@ before_script:
 
 script:
 
- # - ./gradlew clean build connectedCheck -PdisablePreDex --stacktrace #--scan
+#  - ./gradlew clean build connectedCheck -PdisablePreDex --stacktrace #--scan
+#  - ./gradlew connectedCheck --scan
   - ./gradlew build --scan
 
 #after_success:
