--- a/.travis.yml
+++ b/.travis.yml
@@ -58,8 +58,8 @@ before_script:
 script:
 
 #  - ./gradlew clean build connectedCheck -PdisablePreDex --stacktrace #--scan
-#  - ./gradlew connectedCheck --scan
+  - ./gradlew connectedCheck --scan
   - ./gradlew build --scan
 
 #after_success:
-#  - bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash)
