--- a/.travis.yml
+++ b/.travis.yml
@@ -61,5 +61,5 @@ script:
   - ./gradlew connectedCheck --scan
   - ./gradlew build --scan
 
-#after_success:
+after_success:
   - bash <(curl -s https://codecov.io/bash)
