--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,8 @@ before_script:
 script:
 
 #  - ./gradlew clean build connectedCheck -PdisablePreDex --stacktrace #--scan
-  - ./gradlew connectedCheck --scan
+  - ./gradlew test    --scan #unit tests
+  - ./gradlew connectedCheck --scan #Instrumentation tests
   - ./gradlew build --scan
 
 after_success:
